2003-10-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Queue.cs: nullify the array in Clear.

2003-09-26  Zoltan Varga  <vargaz@freemail.hu>

	* Hashtable.cs: Remove empty static constructor since it prevents this
	class from being beforefieldinit.

2003-08-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CaseInsensitiveHashCodeProvider.cs: small speed improvement.

2003-08-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Stack.cs: patch by JoergR@voelcker.com (Joerg Rosenkranz) that fixes
	bug #47789.

2003-08-20  Duncan Mak  <duncan@ximian.com>

	* Hashtable.cs (PutImpl): Fix my previous checkin, see details
	posted on bug #47692.

	I really hope I don't mess up this time, because, if I do again,
	it will be really embarrassing.

2003-08-17  Duncan Mak  <duncan@ximian.com>

	* Hashtable.cs (PutImpl): Patch from Luca Barbieri <lb@lb.ods.org>.
	Currently Hashtable.PutImpl has an incorrect test which causes the
	key chain search to terminate as soon as a free slot is found,
	causing key duplication.

	This fixes bug #47692.

2003-08-11  Duncan Mak  <duncan@ximian.com>

	* DictionaryBase.cs: Applied patch from Carlos Barcenilla
	(barce@frlp.utn.edu.ar).
	
	(Idictionary.Add): Added OnValidate, and undo the transaction if
	OnInsertCompleteFails.

	(Indexer set): MS Implementation does not call OnInsert and undoes
	if OnSetComplete throws an exception
	(Indexer get): return value is obtained after calling OnGet.

	(IDictionary.Remove): Call to OnValidate added. If key does not
	exists calls OnValidate, OnRemove and OnRemoveComplete.

	(protected IDictionary Dictionary get): Should return itself, not
	the inner hashtable.

	This fixes bug #47460.

2003-08-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* CollectionBase.cs: applied patch from Carlos Barcenilla
	(barce@frlp.utn.edu.ar).

2003-08-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ArrayList.cs: added / so that gvim syntax highlight doesn't go crazy.